# City-Building-Card-Game

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.03d8ef7  CardsDataConfig.ini  Plans for CBCG2.md  README.md  README.ru.md  abstractcard.h  card.cpp  card.h  cardImages.qrc  carddataconfigreader.cpp  carddataconfigreader.h  cardfactory.cpp  cardfactory.h  cardinfo.cpp  cardinfo.h  cardinventory.h  cardreserve.cpp  cardreserve.h  cardscrollwidget.cpp  cardscrollwidget.h  cardstackwidget.cpp  cardstackwidget.h  cardwidget.cpp  cardwidget.h  diceroller.cpp  diceroller.h  gameSounds.qrc  gameapplication.cpp  gameapplication.h  gameapplicationbuilder.cpp  gameapplicationbuilder.h  gamecontroller.cpp  gamecontroller.h  gamelogic.cpp  gamelogic.h  gamemanager.cpp  gamemanager.h  gamestate.cpp  (+12 more)
cardDataHandler/: bankcardshandler.cpp  bankcardshandler.h  carddatahandler.h  cardstowinhandler.cpp  cardstowinhandler.h  initialplayercardshandler.cpp  initialplayercardshandler.h
cards/: amusementpark.cpp  amusementpark.h  animalfarm.cpp  animalfarm.h  appleorchard.cpp  appleorchard.h  bakery.cpp  bakery.h  businesscenter.cpp  businesscenter.h  cafe.cpp  cafe.h  card.cpp  card.h  cheesefactory.cpp  cheesefactory.h  forest.cpp  forest.h  fruitmarket.cpp  fruitmarket.h  furniturefactory.cpp  furniturefactory.h  mine.cpp  mine.h  radiotower.cpp  radiotower.h  railwaystation.cpp  railwaystation.h  restaurant.cpp  restaurant.h  shop.cpp  shop.h  shoppingmall.cpp  shoppingmall.h  stadium.cpp  stadium.h  tvcenter.cpp  tvcenter.h  wheatfield.cpp  wheatfield.h
logic/: bank.cpp  bank.h  bankcardshandler.h  carddatahandler.cpp  carddatahandler.h  cardinventory.cpp  cardinventory.h  diceroller.cpp  diceroller.h  gamelogic.cpp  gamelogic.h  icardcontainer.h  initialplayercardshandler.cpp  initialplayercardshandler.h  player.cpp  player.h
logic/cards/: amusementpark.cpp  amusementpark.h  animalfarm.cpp  animalfarm.h  appleorchard.cpp  appleorchard.h  bakery.cpp  bakery.h  businesscenter.cpp  businesscenter.h  cafe.cpp  cafe.h  card.cpp  card.h  cheesefactory.cpp  cheesefactory.h  forest.cpp  forest.h  fruitmarket.cpp  fruitmarket.h  furniturefactory.cpp  furniturefactory.h  mine.cpp  mine.h  radiotower.cpp  radiotower.h  railwaystation.cpp  railwaystation.h  restaurant.cpp  restaurant.h  shop.cpp  shop.h  shoppingmall.cpp  shoppingmall.h  stadium.cpp  stadium.h  tvcenter.cpp  tvcenter.h  wheatfield.cpp  wheatfield.h
network/: client.cpp  client.h  jsonmessagefactory.cpp  jsonmessagefactory.h  networkmanager.cpp  networkmanager.h  server.cpp  server.h
network/jsons/: abstractjsonstrategy.h  jsondicerollresult.cpp  jsondicerollresult.h  jsonfinishincomestate.cpp  jsonfinishincomestate.h  jsongameinit.cpp  jsongameinit.h  jsongameover.cpp  jsongameover.h
ui/: basecardwidget.cpp  basecardwidget.h  carddragoverlay.cpp  carddragoverlay.h  carditem.cpp  carditem.h  cardscrollwidget.cpp  cardscrollwidget.h  cardstackwidget.cpp  cardstackwidget.h  cardview.cpp  cardview.h  cardwidget.cpp  cardwidget.h  democardstackwidget.cpp  democardstackwidget.h  democardwidget.cpp  democardwidget.h  flowlayout.cpp  flowlayout.h  gameconfig.cpp  gameconfig.h  gamemainwindow.cpp  gamemainwindow.h  gamesceneboardwidget.cpp  gamesceneboardwidget.h  mainwindow.cpp  mainwindow.h  playerpage.cpp  playerpage.h  startmenu.cpp  startmenu.h
